@@ -36,12 +36,12 @@ class ElavonTest < Test::Unit::TestCase
 
     @google_pay = ActiveMerchant::Billing::NetworkTokenizationCreditCard.new({
       source: :google_pay,
-      payment_data: "{ 'version': 'EC_v1', 'data': 'QlzLxRFnNP9/GTaMhBwgmZ2ywntbr9'}"
+      payment_data: { 'version' => 'EC_v1', 'data' => 'QlzLxRFnNP9/GTaMhBwgmZ2ywntbr9' }
     })
 
     @apple_pay = ActiveMerchant::Billing::NetworkTokenizationCreditCard.new({
       source: :apple_pay,
-      payment_data: "{ 'version': 'EC_v1', 'data': 'QlzLxRFnNP9/GTaMhBwgmZ2ywntbr9'}"
+      payment_data: { 'version' => 'EC_v1', 'data' => 'QlzLxRFnNP9/GTaMhBwgmZ2ywntbr9' }
     })
   end
 
@@ -163,7 +163,7 @@ class ElavonTest < Test::Unit::TestCase
     stub_comms do
       @gateway.purchase(@amount, @apple_pay, @options)
     end.check_request do |_endpoint, data, _headers|
-      assert_match(/<ssl_applepay_web>%7B %27version%27%3A %27EC_v1%27%2C %27data%27%3A %27QlzLxRFnNP9%2FGTaMhBwgmZ2ywntbr9%27%7D<\/ssl_applepay_web>/, data)
+      assert_match(/<ssl_applepay_web>%7B%22version%22%3A%22EC_v1%22%2C %22data%22%3A%22QlzLxRFnNP9%2FGTaMhBwgmZ2ywntbr9%22%7D<\/ssl_applepay_web>/, data)
     end.respond_with(successful_purchase_response)
   end
 
@@ -171,7 +171,7 @@ class ElavonTest < Test::Unit::TestCase
     stub_comms do
       @gateway.purchase(@amount, @google_pay, @options)
     end.check_request do |_endpoint, data, _headers|
-      assert_match(/<ssl_google_pay>%7B %27version%27%3A %27EC_v1%27%2C %27data%27%3A %27QlzLxRFnNP9%2FGTaMhBwgmZ2ywntbr9%27%7D<\/ssl_google_pay>/, data)
+      assert_match(/<ssl_google_pay>%7B%22version%22%3A%22EC_v1%22%2C %22data%22%3A%22QlzLxRFnNP9%2FGTaMhBwgmZ2ywntbr9%22%7D<\/ssl_google_pay>/, data)
     end.respond_with(successful_purchase_response)
   end
 
